--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "showdown": "^2.1.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
